--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <p id="controls">Select the number of players with key 1/2. <br>
+    Control keys for player 1: arrows <br>
+    Control keys for player 2: W S A D</p>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
